# norea

./: CLAUDE.md  index.html
.github/workflows/: android.yml  ci.yml  linux.yml  windows.yml
docs/: development.md
docs/plugins/: contract.md
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.local-debug.conf.json
src-tauri/src/: backup.rs  chapter_media.rs  database.rs  download_queue.rs  lib.rs  native_stream.rs  schema.sql  schema_download_queue.sql  scraper.rs  task_notifications.rs  tray.rs  update.rs
src/components/: AppFrame.tsx  LibraryGrid.tsx  PdfReaderContent.tsx  ReaderContent.tsx  ReaderSeekbars.tsx  ReaderSettingsPanel.tsx  TaskNotifications.tsx  WindowsTaskNotificationBridge.tsx  reader-virtualization.test.ts  reader-virtualization.ts
src/db/: client.test.ts  client.ts  schema.ts
src/db/queries/: chapter.test.ts  chapter.ts  download-cache.test.ts  download-cache.ts  maintenance.test.ts  maintenance.ts  novel.test.ts  novel.ts
src/lib/: android-storage.test.ts  android-storage.ts  chapter-content-storage.test.ts  chapter-content-storage.ts  chapter-media.test.ts  chapter-media.ts  download-cache-loaders.test.ts  download-cache-loaders.ts  download-cache-media.test.ts  download-cache-media.ts  epub-html.ts  http.test.ts  http.ts  local-import-media.test.ts  local-import-media.ts  local-import.test.ts  local-import.ts  logging.ts  native-stream.test.ts  native-stream.ts  observability.ts  performance-budgets.ts  reader-query-invalidation.test.ts  reader-query-invalidation.ts  tauri-runtime.ts  update.test.ts  update.ts
src/lib/backup/: io.test.ts  (+7 more)
src/routes/: __root.tsx  browse.tsx  downloads.tsx  global-search.tsx  library.tsx  novel.tsx  reader.tsx  settings.tsx  source.tsx  tasks.tsx  updates.tsx
src/store/: reader.ts
src/styles/: app.css  browse.css  downloads.css  library.css  novel.css  reader.css  tasks.css
strings/types/: index.ts
(+23 files in other folders)
