[package]
name = "app"
version = "0.1.0"
description = "Norea - Tauri 2 light-novel reader"
authors = ["Norea contributors"]
license = "MIT"
repository = "https://github.com/tinywind/norea"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
log = "0.4.29"
tauri = { version = "2.11.1", features = ["protocol-asset", "tray-icon", "unstable"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-http = "2.5.9"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tokio = { version = "1.52.3", features = ["sync", "time"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
rustls-platform-verifier = "0.7.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7.2"
windows = { version = "0.61", features = ["Foundation_Collections", "UI_Notifications", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
